# aoc-2022

./: .gitignore  README.md
day01/: CMakeLists.txt  Makefile  day01a.cpp  day01b.cpp
day01/include/: day01a.hpp  day01b.hpp
day01/src/: day01a.cpp  day01b.cpp  main.cpp
day01/tests/: CMakeLists.txt  test.txt  test_day01.cpp
day02/: .gitignore  CMakeLists.txt
day02/include/: day02a.hpp  day02b.hpp
day02/src/: day02a.cpp  day02b.cpp  main.cpp
day02/tests/: CMakeLists.txt  test_day02.cpp
day03/: CMakeLists.txt
day03/include/: day03a.hpp  day03b.hpp
day03/src/: day03a.cpp  day03b.cpp  main.cpp
day03/tests/: CMakeLists.txt  test_day03.cpp
day04/: CMakeLists.txt
day04/include/: day04a.hpp  day04b.hpp
day04/src/: day04a.cpp  day04b.cpp  main.cpp
day04/tests/: CMakeLists.txt  test_day04.cpp
day05/: CMakeLists.txt
day05/include/: day05a.hpp  day05b.hpp
day05/src/: day05a.cpp  day05b.cpp  main.cpp
day05/tests/: CMakeLists.txt  test_day05.cpp
day06/: CMakeLists.txt
day06/include/: day06a.hpp  day06b.hpp
day06/src/: day06a.cpp  day06b.cpp  main.cpp
day06/tests/: CMakeLists.txt  test_day06.cpp
day07/: CMakeLists.txt
day07/boost_test/: example
day07/include/: day07a.hpp  day07b.hpp
day07/src/: day07a.cpp  day07b.cpp  main.cpp
day07/tests/: CMakeLists.txt  test_day07.cpp
dayXX/: CMakeLists.txt
dayXX/include/: dayXXa.hpp  dayXXb.hpp
dayXX/src/: dayXXa.cpp  dayXXb.cpp  main.cpp
dayXX/tests/: CMakeLists.txt  test_dayXX.cpp
docs/doxygen/: Doxyfile
