include(CTest)
set(TEST_BINARY ${PROJECT_NAME}_test)
add_executable(${TEST_BINARY} test_day02.cpp)
target_link_libraries(${TEST_BINARY} libday02 gtest gtest_main pthread)
add_test(test_day2 tests/test_day02.cpp)
target_compile_definitions(libday02 PUBLIC TEST_RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/")
