include(CTest)
set(TEST_BINARY ${PROJECT_NAME}_test)
add_executable(${TEST_BINARY} test_day03.cpp)
target_link_libraries(${TEST_BINARY} libday03 gtest gtest_main pthread)
add_test(test_day03 tests/test_day03.cpp)
target_compile_definitions(libday03 PUBLIC TEST_RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/")
