include(CTest)
set(TEST_BINARY ${PROJECT_NAME}_test)
add_executable(${TEST_BINARY} test_day06.cpp)
target_link_libraries(${TEST_BINARY} libday06 gtest gtest_main pthread)
add_test(test_day06 tests/test_day06.cpp)
target_compile_definitions(libday06 PUBLIC TEST_RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/")
