include(CTest)
set(TEST_BINARY ${PROJECT_NAME}_test)
add_executable(${TEST_BINARY} test_day07.cpp)
target_link_libraries(${TEST_BINARY} libday07 gtest gtest_main pthread)
add_test(test_day07 tests/test_day07.cpp)
target_compile_definitions(libday07 PUBLIC TEST_RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/")
